--- a/springboot-activiti7-server/pom.xml
+++ b/springboot-activiti7-server/pom.xml
@@ -6,18 +6,18 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 <parent>
 	<groupId>org.springframework.boot</groupId>
 	<artifactId>spring-boot-starter-parent</artifactId>
-	<version>2.5.15</version>
+	<version>2.7.18</version>
 </parent>
 <groupId>com.diosaraiva</groupId>
 <version>0.0.1</version>
-<artifactId>springboot-activiti</artifactId>
-<name>springboot-activiti</name>
-<description>springboot-activiti</description>
+<artifactId>springboot-activiti7-server</artifactId>
+<name>springboot-activiti7-server</name>
+<description>springboot-activiti7-server</description>
 <properties>
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-	<java.version>17</java.version>
-	<springboot.version>2.5.15</springboot.version>
+	<java.version>11</java.version>
+	<springboot.version>2.7.18</springboot.version>
 	<spring.version>5.3.39</spring.version>
 	<springintegration.version>4.1.1.RELEASE</springintegration.version>
 	<activiti.version>7.1.0.M6</activiti.version>
@@ -36,7 +36,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<version>${springboot.version}</version>
 	</dependency>
 	<dependency>
-		<groupId>org.springframework.boot</groupId>
+		<groupId>org.springframework.boot</groupId> 
 		<artifactId>spring-boot-starter-security</artifactId>
 		<version>${springboot.version}</version>
 	</dependency>
